[gd_scene load_steps=5 format=2]

[ext_resource path="res://Ship/Bullet/Bomb.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 75.0

[sub_resource type="OpenSimplexNoise" id=2]
seed = 3
octaves = 1
period = 2.1

[sub_resource type="NoiseTexture" id=3]
flags = 39
noise = SubResource( 2 )

[node name="Bomb" type="Area2D"]
z_index = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.862745, 0.113725, 0.113725, 1 )
texture = SubResource( 3 )
polygon = PoolVector2Array( 0, -75, 50, -50, 75, 0, 50, 50, 0, 75, -50, 50, -75, 0, -50, -50 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Bomb_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bomb_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
